--- a/descriptive_statistics/new_start.html
+++ b/descriptive_statistics/new_start.html
@@ -23,7 +23,68 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
 
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand">
+          <p class="fa fa-calculator"></p>
+          Omnicalc
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <div>
+          <a action="/word_count/new" class="list-group-item">
+            <i class="fa fa-book"></i>
+            Word Count
+          </a>
+          <a href="/loan_payment/new" class="list-group-item">
+            <i class="fa fa-money"></i>
+            Loan Payment
+          </a>
+          <a href="/time_between/new" class="list-group-item">
+            <i class="fa fa-clock-o"></i>
+            Time Between
+          </a>
+          <a href="/descriptive_statistics/new" class="list-group-item">
+            <i class="fa fa-bar-chart"></i>
+            Descriptive Statistics
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-9">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">New Descriptive Statistics Calculation</h3>
+          </div>
+
+          <div class="panel-body">
+            <form class="form-horizontal" action="file:///C:/Sites/omnicalc_mockups/descriptive_statistics/results_start.html">
+              <div class="form-group">
+                <label class="col-md-2 control-label">Numbers</label>
+
+                <div class="col-md-9">
+                  <textarea class="form-control" rows="3" placeholder="Enter your numbers (separated by spaces)"></textarea>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-md-offset-2 col-md-9">
+                  <button class="btn btn-primary btn-block">Submit</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
