--- a/word_count/results_start.html
+++ b/word_count/results_start.html
@@ -25,5 +25,70 @@
 </head>
 <body>
 
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand">
+          <p class="fa fa-calculator"></p>
+          Omnicalc
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <div>
+          <a href="/word_count/new" class="list-group-item">
+            <i class="fa fa-book"></i>
+            Word Count
+          </a>
+          <a href="/loan_payment/new" class="list-group-item">
+            <i class="fa fa-money"></i>
+            Loan Payment
+          </a>
+          <a href="/time_between/new" class="list-group-item">
+            <i class="fa fa-clock-o"></i>
+            Time Between
+          </a>
+          <a href="/descriptive_statistics/new" class="list-group-item">
+            <i class="fa fa-bar-chart"></i>
+            Descriptive Statistics
+          </a>
+        </div>
+      </div>
+
+      <div class="col-md-9">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Word Count Results</h3>
+          </div>
+
+          <div class="panel-body">
+            <dl class="dl-horizontal">
+
+              <dt>Text</dt>
+              <dd></dd>
+
+              <dt>Word Count</dt>
+              <dd>0</dd>
+
+              <dt>Character Count (with spaces)</dt>
+              <dd>0</dd>
+
+              <dt>Character Count (without spaces)</dt>
+              <dd>0</dd>
+
+              <dt>Occurrences of <code></code></dt>
+              <dd>0</dd>
+
+            </dl>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
